@@ -658,6 +658,7 @@
         <field key="sessionid" dbtype="varchar" precision="100" phptype="string" null="false" default="" />
         <field key="dob" dbtype="int" precision="10" phptype="integer" null="false" default="0" />
         <field key="gender" dbtype="int" precision="1" phptype="integer" null="false" default="0" />
+        <field key="address" dbtype="text" phptype="string" null="false" default="" />
         <field key="country" dbtype="varchar" precision="255" phptype="string" null="false" default="" />
         <field key="city" dbtype="varchar" precision="255" phptype="string" null="false" default="" />
         <field key="state" dbtype="varchar" precision="25" phptype="string" null="false" default="" />
