@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.0-beta-5 ($LastChangedRevision$, $LastChangedDate$)
 ====================================
+- Added 'address' field to modUserProfile
 - Added ability to edit the (anonymous) user group from the user group editing panels
 - Fixed typo in usergroup get processor
 - [#MODX-1018] Fixed bug with having to click the Clear Filter button in a settings grid twice
